--- a/indexmemory.html
+++ b/indexmemory.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stylememory.css">
 </head>
 <body>
+<!--     add a div container -->
     <div class="container">
         <h2>Memory Game</h2>
         <div class="game"></div>
