--- a/indexmemory.html
+++ b/indexmemory.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+<!--         headig 2 created -->
         <h2>Memory Game</h2>
         <div class="game"></div>
         <button class="reset">Restart Game</button>
